--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-resolve-src": "^2.0.0",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^5.12.3",
+    "gatsby-plugin-styled-components": "^6.14.0",
     "gatsby-source-filesystem": "^2.1.26",
     "gatsby-transformer-sharp": "^2.2.16",
     "prop-types": "^15.7.2",
