--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "babel-plugin-styled-components": "^2.1.4",
     "citation-js": "^0.5.3",
     "gatsby": "^4.0.0",
     "gatsby-image": "^2.2.20",
@@ -33,7 +34,8 @@
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.0",
     "react-router-hash-link": "^1.2.1",
-    "smooth-scroll": "^16.0.3"
+    "smooth-scroll": "^16.0.3",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "gatsby-plugin-remove-trailing-slashes": "^2.0.11",
