--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
   force = true
 
 [[redirects]]
-  from = "/nudge/*"
+  from = "/nudge"
   to = "https://meetup-nudge.netlify.app/"
   status = 200
   force = true
